--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -11,24 +11,28 @@
     "react-router": "^0.13.2"
   },
   "devDependencies": {
+    "babelify": "^6.0.2",
     "browserify": "^9.0.8",
     "clean-css": "^3.1.9",
     "envify": "^3.4.0",
     "nodemon": "^1.3.7",
-    "reactify": "^1.1.0",
+    "npm-run-all": "^1.2.2",
     "rework-npm": "^1.0.0",
     "rework-npm-cli": "^0.1.1",
+    "uglifyjs": "^2.4.10",
     "watchify": "^3.1.1"
   },
   "scripts": {
+    "build": "npm-run-all --parallel build-js build-css",
+    "watch": "npm-run-all --parallel watch-js watch-css",
     "build-js": "browserify src/app.jsx | uglifyjs > build/app.js",
     "build-css": "rework-npm index.css | cleancss -o build/app.css",
     "watch-js": "watchify src/app.jsx -o build/app.js --debug --verbose",
-    "watch-css": "nodemon -e css --ignore build/app.css --exec 'rework-npm index.css -o build/app.css'"
+    "watch-css": "nodemon -e css --ignore build --exec \"rework-npm index.css -o build/app.css\""
   },
   "browserify": {
     "transform": [
-      "reactify",
+      "babelify",
       "envify"
     ]
   }
