--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -6,18 +6,15 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap": "^3.3.4",
-    "flux": "^2.0.1",
-    "react": "^0.13.1",
-    "react-router": "^0.13.2"
+    "flummox": "^4.0.0-alpha",
+    "react": "^0.13.1"
   },
   "devDependencies": {
     "babelify": "^6.0.2",
     "browserify": "^9.0.8",
     "clean-css": "^3.1.9",
-    "envify": "^3.4.0",
     "nodemon": "^1.3.7",
     "npm-run-all": "^1.2.2",
-    "rework-npm": "^1.0.0",
     "rework-npm-cli": "^0.1.1",
     "uglifyjs": "^2.4.10",
     "watchify": "^3.1.1"
@@ -25,15 +22,14 @@
   "scripts": {
     "build": "npm-run-all --parallel build-js build-css",
     "watch": "npm-run-all --parallel watch-js watch-css",
-    "build-js": "browserify src/app.jsx | uglifyjs > build/app.js",
+    "build-js": "browserify --extension=.jsx --extension=.js src/app.jsx | uglifyjs > build/app.js",
     "build-css": "rework-npm index.css | cleancss -o build/app.css",
     "watch-js": "watchify src/app.jsx -o build/app.js --debug --verbose",
     "watch-css": "nodemon -e css --ignore build --exec \"rework-npm index.css -o build/app.css\""
   },
   "browserify": {
     "transform": [
-      "babelify",
-      "envify"
+      "babelify"
     ]
   }
 }
