--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "author": "Ryan Cole",
   "description": "A place to store your League of Legends replay files.",
-  "main": "index.js",
+  "main": "src/index.jsx",
   "dependencies": {
     "bootstrap": "^3.3.4",
     "flummox": "^4.0.0-alpha",
@@ -22,9 +22,9 @@
   "scripts": {
     "build": "npm-run-all --parallel build-js build-css",
     "watch": "npm-run-all --parallel watch-js watch-css",
-    "build-js": "browserify --extension=.jsx --extension=.js src/app.jsx | uglifyjs > build/app.js",
+    "build-js": "browserify src/index.jsx --extension=.jsx --extension=.js | uglifyjs > build/app.js",
     "build-css": "rework-npm index.css | cleancss -o build/app.css",
-    "watch-js": "watchify src/app.jsx -o build/app.js --debug --verbose",
+    "watch-js": "watchify src/index.jsx --extension=.jsx --extension=.js --debug --verbose --outfile build/app.js",
     "watch-css": "nodemon -e css --ignore build --exec \"rework-npm index.css -o build/app.css\""
   },
   "browserify": {
