--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "bootstrap": "^3.3.4",
     "flummox": "^4.0.0-alpha",
-    "react": "^0.13.1"
+    "react": "^0.13.1",
+    "react-router": "^0.13.2"
   },
   "devDependencies": {
     "babelify": "^6.0.2",
