--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -8,7 +8,8 @@
     "bootstrap": "^3.3.4",
     "flummox": "^4.0.0-alpha",
     "react": "^0.13.1",
-    "react-router": "^0.13.2"
+    "react-router": "^0.13.2",
+    "reqwest": "^1.1.5"
   },
   "devDependencies": {
     "babelify": "^6.0.2",
