--- a/replays-api/package.json
+++ b/replays-api/package.json
@@ -5,11 +5,17 @@
   "main": "index.js",
   "author": "Ryan Cole",
   "license": "ISC",
+  "scripts": {
+    "watch": "nodemon --es_staging index.js"
+  },
   "dependencies": {
     "boom": "^2.7.0",
     "hapi": "^8.4.0",
     "hapi-auth-jwt": "^2.1.1",
     "jsonwebtoken": "^4.2.2",
     "nano": "^6.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.3.7"
   }
 }
