--- a/replays-api/package.json
+++ b/replays-api/package.json
@@ -6,7 +6,7 @@
   "author": "Ryan Cole",
   "license": "ISC",
   "scripts": {
-    "watch": "nodemon --harmony_arrays index.js"
+    "watch": "nodemon --harmony_arrays --harmony_arrow_functions index.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1.30",
