--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -7,14 +7,15 @@
     "bootstrap": "^3.3.4",
     "flummox": "^4.0.0-alpha",
     "immutable": "^3.7.2",
+    "qwest": "^1.6.0",
     "react": "^0.13.1",
-    "react-router": "^0.13.2",
-    "reqwest": "^1.1.5"
+    "react-router": "^0.13.2"
   },
   "devDependencies": {
     "babelify": "^6.0.2",
     "browserify": "^9.0.8",
     "clean-css": "^3.1.9",
+    "http-server": "^0.8.0",
     "nodemon": "^1.3.7",
     "npm-run-all": "^1.2.2",
     "rework-npm-cli": "^0.1.1",
@@ -23,15 +24,25 @@
   },
   "scripts": {
     "build": "npm-run-all --parallel build-js build-css",
-    "watch": "npm-run-all --parallel watch-js watch-css",
+    "watch": "npm-run-all --parallel watch-js watch-css http-server",
     "build-js": "browserify src/AppBootstrap.jsx --extension=.jsx --extension=.js | uglifyjs > build/app.js",
     "build-css": "rework-npm index.css | cleancss -o build/app.css",
     "watch-js": "watchify src/AppBootstrap.jsx --extension=.jsx --extension=.js --debug --verbose --outfile build/app.js",
-    "watch-css": "nodemon -e css --ignore build --exec \"rework-npm index.css -o build/app.css\""
+    "watch-css": "nodemon -e css --ignore build --exec \"rework-npm index.css -o build/app.css\"",
+    "http-server": "http-server -p 80"
   },
   "browserify": {
     "transform": [
-      ["babelify", { "optional": ["es7.asyncFunctions", "es7.decorators", "asyncToGenerator"] }]
+      [
+        "babelify",
+        {
+          "optional": [
+            "es7.asyncFunctions",
+            "es7.decorators",
+            "asyncToGenerator"
+          ]
+        }
+      ]
     ]
   }
 }
