--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^3.3.4",
     "flummox": "^4.0.0-alpha",
     "immutable": "^3.7.2",
+    "jwt-decode": "^1.1.0",
     "qwest": "^1.6.0",
     "react": "^0.13.1",
     "react-router": "^0.13.2"
