--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -10,7 +10,8 @@
     "jwt-decode": "^1.1.0",
     "qwest": "^1.6.0",
     "react": "^0.13.1",
-    "react-router": "^0.13.2"
+    "react-router": "^0.13.2",
+    "whatwg-fetch": "^0.8.2"
   },
   "devDependencies": {
     "babelify": "^6.0.2",
