--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -5,13 +5,12 @@
   "description": "A place to store your League of Legends replay files.",
   "dependencies": {
     "bootstrap": "^3.3.4",
+    "fetchival": "^0.2.0",
     "flummox": "^4.0.0-alpha",
     "immutable": "^3.7.2",
     "jwt-decode": "^1.1.0",
-    "qwest": "^1.6.0",
     "react": "^0.13.1",
     "react-router": "^0.13.2",
-    "whatwg-fetch": "^0.8.2"
   },
   "devDependencies": {
     "babelify": "^6.0.2",
