--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -11,6 +11,7 @@
     "jwt-decode": "^1.1.0",
     "react": "^0.13.1",
     "react-router": "^0.13.2",
+    "whatwg-fetch": "^0.8.2"
   },
   "devDependencies": {
     "babelify": "^6.0.2",
