messing around with react bootstrap modals

--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -8,6 +8,7 @@
     "fetchival": "^0.2.0",
     "flummox": "^4.0.0-alpha",
     "react": "^0.13.1",
+    "react-bootstrap": "^0.23.0",
     "react-router": "^0.13.2",
     "whatwg-fetch": "^0.8.2"
   },
