--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "build": "npm-run-all --parallel build-js build-css",
     "watch": "npm-run-all --parallel watch-js watch-css http-server",
-    "build-js": "browserify src/AppBootstrap.jsx --extension=.jsx --extension=.js | uglifyjs > build/app.js",
+    "build-js": "browserify src/AppBootstrap.jsx --extension=.jsx --extension=.js > build/app.js",
     "build-css": "rework-npm index.css | cleancss -o build/app.css",
     "watch-js": "watchify src/AppBootstrap.jsx --extension=.jsx --extension=.js --debug --verbose --outfile build/app.js",
     "watch-css": "nodemon -e css --ignore build --exec \"rework-npm index.css -o build/app.css\"",
