--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "bootstrap": "^3.3.4",
     "fetchival": "^0.2.0",
-    "flummox": "^4.0.0-alpha",
+    "flummox": "^3.5.2",
     "immutable": "^3.7.3",
     "react": "^0.13.1",
     "react-router": "^0.13.3",
