--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -8,6 +8,7 @@
     "fetchival": "^0.2.0",
     "flummox": "^3.5.2",
     "immutable": "^3.7.3",
+    "jsonwebtoken": "^5.0.2",
     "react": "^0.13.1",
     "react-router": "^0.13.3",
     "whatwg-fetch": "^0.8.2"
