--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -9,9 +9,9 @@
     "flummox": "^3.5.2",
     "immutable": "^3.7.3",
     "jsonwebtoken": "^5.0.2",
+    "node-fetch": "^1.3.0",
     "react": "^0.13.1",
-    "react-router": "^0.13.3",
-    "whatwg-fetch": "^0.8.2"
+    "react-router": "^0.13.3"
   },
   "devDependencies": {
     "babelify": "^6.0.2",
