--- a/replays-web/settings.json
+++ b/replays-web/settings.json
@@ -1,4 +1,4 @@
 {
-  "API_ADDR": "http://localhost:8080/api",
+  "API_ADDR": "http://api.dank.gg",
   "DOWNLOAD_PREFIX": "https://s3-us-west-2.amazonaws.com/dankgg"
 }
