--- a/replays-api/package.json
+++ b/replays-api/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "scripts": {
     "watch": "nodemon --harmony_arrays --harmony_arrow_functions index.js",
-    "start": "nodemon --harmony_arrays --harmony_arrow_functions index.js"
+    "start": "iojs --harmony_arrays --harmony_arrow_functions index.js"
   },
   "dependencies": {
     "aws-sdk": "^2.1.30",
