--- a/replays-web/Dockerfile
+++ b/replays-web/Dockerfile
@@ -5,3 +5,6 @@ FROM nginx
 # load dat shiet
 COPY build /usr/share/nginx/html/build
 COPY index.html /usr/share/nginx/html/index.html
+
+# expose poop
+EXPOSE 80
