--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -5,6 +5,7 @@
   "description": "A place to store your League of Legends replay files.",
   "dependencies": {
     "bootstrap": "^3.3.4",
+    "envify": "^3.4.0",
     "fetchival": "^0.2.0",
     "flummox": "^3.5.2",
     "immutable": "^3.7.3",
@@ -21,13 +22,12 @@
     "nodemon": "^1.3.7",
     "npm-run-all": "^1.2.2",
     "rework-npm-cli": "^0.1.1",
-    "uglifyjs": "^2.4.10",
     "watchify": "^3.1.1"
   },
   "scripts": {
     "build": "npm-run-all --parallel build-js build-css",
     "watch": "npm-run-all --parallel watch-js watch-css http-server",
-    "build-js": "browserify src/AppBootstrap.jsx --extension=.jsx --extension=.js > build/app.js",
+    "build-js": "browserify src/AppBootstrap.jsx -t [ envify --NODE_ENV production ] --extension=.jsx --extension=.js > build/app.js",
     "build-css": "rework-npm index.css | cleancss -o build/app.css",
     "watch-js": "watchify src/AppBootstrap.jsx --extension=.jsx --extension=.js --debug --verbose --outfile build/app.js",
     "watch-css": "nodemon -e css --ignore build --exec \"rework-npm index.css -o build/app.css\"",
