--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -14,7 +14,6 @@
     "react-router": "^0.13.3"
   },
   "devDependencies": {
-    "envify": "^3.4.0",
     "babelify": "^6.0.2",
     "browserify": "^9.0.8",
     "clean-css": "^3.1.9",
@@ -27,7 +26,7 @@
   "scripts": {
     "build": "npm-run-all --parallel build-js build-css",
     "watch": "npm-run-all --parallel watch-js watch-css http-server",
-    "build-js": "browserify src/AppBootstrap.jsx -t [ envify --NODE_ENV production ] --extension=.jsx --extension=.js > build/app.js",
+    "build-js": "browserify src/AppBootstrap.jsx --extension=.jsx --extension=.js > build/app.js",
     "build-css": "rework-npm index.css | cleancss -o build/app.css",
     "watch-js": "watchify src/AppBootstrap.jsx --extension=.jsx --extension=.js --debug --verbose --outfile build/app.js",
     "watch-css": "nodemon -e css --ignore build --exec \"rework-npm index.css -o build/app.css\"",
@@ -41,7 +40,8 @@
           "optional": [
             "es7.asyncFunctions",
             "es7.decorators",
-            "asyncToGenerator"
+            "asyncToGenerator",
+            "utility.inlineEnvironmentVariables"
           ]
         }
       ]
