--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -8,8 +8,8 @@
     "fetchival": "^0.2.0",
     "flummox": "^3.5.2",
     "immutable": "^3.7.3",
+    "isomorphic-fetch": "^2.1.0",
     "jsonwebtoken": "^5.0.2",
-    "node-fetch": "^1.3.0",
     "react": "^0.13.1",
     "react-router": "^0.13.3"
   },
