--- a/replays-api/settings.json
+++ b/replays-api/settings.json
@@ -1,4 +1,5 @@
 {
+  "VERSION": "0.0.1",
   "JWT_KEY": "foobar",
   "HASH_SEED": "haha",
   "AWS_SQL": "postgres://dank:password@dank.c7mtujn7zj0p.us-west-2.rds.amazonaws.com/dank"
