--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.3.7",
     "npm-run-all": "^1.2.2",
     "rework-npm-cli": "^0.1.1",
+    "uglifyify": "^3.0.1",
     "watchify": "^3.1.1"
   },
   "scripts": {
@@ -43,7 +44,8 @@
             "utility.inlineEnvironmentVariables"
           ]
         }
-      ]
+      ],
+      "uglifyify"
     ]
   }
 }
