add public / private toggle

--- a/replays-api/settings.json
+++ b/replays-api/settings.json
@@ -3,5 +3,6 @@
   "JWT_KEY": "foobar",
   "HASH_SEED": "haha",
   "AWS_S3_BUCKET": "dankgg",
+  "AWS_REGION": "us-west-2",
   "AWS_SQL": "postgres://dank:password@dank.c7mtujn7zj0p.us-west-2.rds.amazonaws.com/dank"
 }
