--- a/replays-api/settings.json
+++ b/replays-api/settings.json
@@ -1,8 +1,8 @@
 {
-  "VERSION": "0.0.1",
+  "VERSION": "0.0.2",
   "JWT_KEY": "foobar",
   "HASH_SEED": "haha",
-  "AWS_S3_BUCKET": "dankgg",
+  "AWS_SQL": "postgres://dank:password@dank.c7mtujn7zj0p.us-west-2.rds.amazonaws.com/dank",
   "AWS_REGION": "us-west-2",
-  "AWS_SQL": "postgres://dank:password@dank.c7mtujn7zj0p.us-west-2.rds.amazonaws.com/dank"
+  "AWS_S3_BUCKET": "cdn.dank.gg"
 }
