--- a/replays-web/settings.json
+++ b/replays-web/settings.json
@@ -1,10 +1,10 @@
 {
   "production": {
     "API_ADDR": "http://api.dank.gg",
-    "DOWNLOAD_PREFIX": "https://s3-us-west-2.amazonaws.com/dankgg"
+    "DOWNLOAD_PREFIX": "https://cdn.dank.gg"
   },
   "development": {
     "API_ADDR": "http://localhost:8080",
-    "DOWNLOAD_PREFIX": "https://s3-us-west-2.amazonaws.com/dankgg"
+    "DOWNLOAD_PREFIX": "https://cdn.dank.gg"
   }
 }
