--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -4,48 +4,19 @@
   "author": "Ryan Cole",
   "description": "A place to store your League of Legends replay files.",
   "dependencies": {
-    "bootstrap": "^3.3.4",
-    "fetchival": "^0.2.0",
-    "flummox": "^3.5.2",
-    "immutable": "^3.7.3",
-    "isomorphic-fetch": "^2.1.0",
-    "jsonwebtoken": "^5.0.2",
     "react": "^0.13.1",
+    "flummox": "^3.5.2",
+    "fetchival": "^0.2.0",
+    "immutable": "^3.7.3",
+    "jsonwebtoken": "^5.0.2",
     "react-router": "^0.13.3"
   },
   "devDependencies": {
-    "babelify": "^6.0.2",
-    "browserify": "^9.0.8",
-    "clean-css": "^3.1.9",
-    "http-server": "^0.8.0",
-    "nodemon": "^1.3.7",
-    "npm-run-all": "^1.2.2",
-    "rework-npm-cli": "^0.1.1",
-    "uglifyify": "^3.0.1",
-    "watchify": "^3.1.1"
+    "babel-core": "^5.6.15",
+    "babel-loader": "^5.2.2",
+    "webpack": "^1.10.0"
   },
   "scripts": {
-    "build": "npm-run-all --parallel build-js build-css",
-    "watch": "npm-run-all --parallel watch-js watch-css http-server",
-    "build-js": "browserify src/AppBootstrap.jsx --extension=.jsx --extension=.js > build/app.js",
-    "build-css": "rework-npm index.css | cleancss -o build/app.css",
-    "watch-js": "watchify src/AppBootstrap.jsx --extension=.jsx --extension=.js --debug --verbose --outfile build/app.js",
-    "watch-css": "nodemon -e css --ignore build --exec \"rework-npm index.css -o build/app.css\"",
-    "http-server": "http-server -p 8081"
-  },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "optional": [
-            "es7.asyncFunctions",
-            "es7.decorators",
-            "utility.inlineEnvironmentVariables"
-          ]
-        }
-      ],
-      "uglifyify"
-    ]
+    "build": "webpack --progress --colors"
   }
 }
