--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "babel-core": "^5.6.15",
     "babel-loader": "^5.2.2",
+    "babel-runtime": "^5.6.15",
+    "json-loader": "^0.5.2",
     "webpack": "^1.10.0"
   },
   "scripts": {
