--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -16,9 +16,11 @@
     "babel-loader": "^5.2.2",
     "babel-runtime": "^5.6.15",
     "json-loader": "^0.5.2",
-    "webpack": "^1.10.0"
+    "webpack": "^1.10.0",
+    "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
-    "build": "webpack --progress --colors"
+    "watch": "webpack-dev-server",
+    "build-debug": "webpack --progress --colors --devtool source-map --debug --output-pathinfo"
   }
 }
