--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -4,12 +4,14 @@
   "author": "Ryan Cole",
   "description": "A place to store your League of Legends replay files.",
   "dependencies": {
-    "react": "^0.13.1",
-    "flummox": "^3.5.2",
     "fetchival": "^0.2.0",
+    "flummox": "^3.5.2",
     "immutable": "^3.7.3",
     "jsonwebtoken": "^5.0.2",
-    "react-router": "^0.13.3"
+    "material-ui": "^0.9.2",
+    "react": "^0.13.1",
+    "react-router": "^0.13.3",
+    "react-tap-event-plugin": "^0.1.7"
   },
   "devDependencies": {
     "babel-core": "^5.6.15",
@@ -21,7 +23,7 @@
     "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
-    "start": "set \"NODE_ENV=development\" && node src/server.js",
+    "start": "set \"NODE_ENV=development\" && webpack-dev-server",
     "build": "set \"NODE_ENV=production\" && webpack -p --progress --colors",
     "build-debug": "set \"NODE_ENV=development\" && webpack -d --progress --colors"
   }
