--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -4,21 +4,24 @@
   "author": "Ryan Cole",
   "description": "A place to store your League of Legends replay files.",
   "dependencies": {
+    "bootstrap": "^3.3.5",
     "fetchival": "^0.2.0",
     "flummox": "^3.5.2",
     "immutable": "^3.7.3",
     "jsonwebtoken": "^5.0.2",
-    "material-ui": "^0.9.2",
     "react": "^0.13.1",
-    "react-router": "^0.13.3",
-    "react-tap-event-plugin": "^0.1.7"
+    "react-router": "^0.13.3"
   },
   "devDependencies": {
     "babel-core": "^5.6.15",
     "babel-loader": "^5.2.2",
     "babel-runtime": "^5.6.15",
+    "css-loader": "^0.15.2",
+    "file-loader": "^0.8.4",
     "json-loader": "^0.5.2",
     "react-hot-loader": "^1.2.7",
+    "style-loader": "^0.12.3",
+    "url-loader": "^0.5.6",
     "webpack": "^1.10.0",
     "webpack-dev-server": "^1.10.1"
   },
