--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -8,7 +8,8 @@
     "fetchival": "^0.2.0",
     "jsonwebtoken": "^5.0.2",
     "react": "^0.13.1",
-    "react-router": "^0.13.3"
+    "react-router": "^0.13.3",
+    "redux": "^0.12.0"
   },
   "devDependencies": {
     "babel-core": "^5.6.15",
