--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -5,11 +5,12 @@
   "description": "A place to store your League of Legends replay files.",
   "dependencies": {
     "bootstrap": "^3.3.5",
-    "fetchival": "^0.2.0",
+    "immutable": "^3.7.4",
     "jsonwebtoken": "^5.0.2",
     "react": "^0.13.1",
     "react-router": "^0.13.3",
-    "redux": "^0.12.0"
+    "redux": "^0.12.0",
+    "whatwg-fetch": "^0.9.0"
   },
   "devDependencies": {
     "babel-core": "^5.6.15",
