--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -8,8 +8,10 @@
     "immutable": "^3.7.4",
     "jsonwebtoken": "^5.0.2",
     "react": "^0.13.1",
+    "react-redux": "^0.2.1",
     "react-router": "^0.13.3",
-    "redux": "^0.12.0",
+    "redux": "https://github.com/gaearon/redux/archive/v1.0.0-rc.tar.gz",
+    "redux-thunk": "^0.1.0",
     "whatwg-fetch": "^0.9.0"
   },
   "devDependencies": {
