--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -7,10 +7,12 @@
     "bootstrap": "^3.3.5",
     "immutable": "^3.7.4",
     "jsonwebtoken": "^5.0.2",
-    "react": "^0.13.1",
+    "react": "^0.14.0-beta1",
+    "react-dom": "^0.14.0-beta1",
     "react-redux": "^0.2.1",
-    "react-router": "^0.13.3",
-    "redux": "https://github.com/gaearon/redux/archive/v1.0.0-rc.tar.gz",
+    "react-router": "^1.0.0-beta3",
+    "redux": "^1.0.0-rc",
+    "redux-react-router": "^0.2.1",
     "redux-thunk": "^0.1.0",
     "whatwg-fetch": "^0.9.0"
   },
@@ -29,7 +31,7 @@
   },
   "scripts": {
     "start": "set \"NODE_ENV=development\" && webpack-dev-server",
-    "build": "set \"NODE_ENV=production\" && webpack -p --progress --colors",
-    "build-debug": "set \"NODE_ENV=development\" && webpack -d --progress --colors"
+    "build": "set \"NODE_ENV=development\" && webpack -d --progress --colors",
+    "build-release": "set \"NODE_ENV=production\" && webpack -p --progress --colors"
   }
 }
