--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -18,9 +18,13 @@
   },
   "devDependencies": {
     "babel-core": "^5.6.15",
+    "babel-eslint": "^3.1.23",
     "babel-loader": "^5.2.2",
     "babel-runtime": "^5.6.15",
     "css-loader": "^0.15.2",
+    "eslint": "^0.24.1",
+    "eslint-loader": "^0.14.2",
+    "eslint-plugin-react": "^2.7.1",
     "file-loader": "^0.8.4",
     "json-loader": "^0.5.2",
     "react-hot-loader": "^1.2.7",
