fix stuff i broke due to eslint

--- a/replays-web/.eslintrc
+++ b/replays-web/.eslintrc
@@ -10,7 +10,8 @@
   },
   "parser": "babel-eslint",
   "rules": {
-    "new-cap": 0
+    "new-cap": 0,
+    "react/jsx-uses-react": 1
   },
   "plugins": [
     "react"
