--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^3.3.5",
     "immutable": "^3.7.4",
     "jsonwebtoken": "^5.0.2",
+    "moment": "^2.10.5",
     "react": "^0.14.0-beta1",
     "react-dom": "^0.14.0-beta1",
     "react-redux": "^0.2.1",
