--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -8,8 +8,8 @@
     "immutable": "^3.7.4",
     "jsonwebtoken": "^5.0.2",
     "moment": "^2.10.5",
-    "react": "^0.14.0-beta1",
-    "react-dom": "^0.14.0-beta1",
+    "react": "^0.14.0-beta2",
+    "react-dom": "^0.14.0-beta2",
     "react-redux": "^0.2.1",
     "react-router": "^1.0.0-beta3",
     "redux": "^1.0.0-rc",
@@ -22,10 +22,12 @@
     "babel-eslint": "^3.1.23",
     "babel-loader": "^5.2.2",
     "babel-runtime": "^5.6.15",
+    "clean-webpack-plugin": "^0.1.3",
     "css-loader": "^0.15.2",
     "eslint": "^0.24.1",
     "eslint-loader": "^0.14.2",
     "eslint-plugin-react": "^2.7.1",
+    "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "json-loader": "^0.5.2",
     "react-hot-loader": "^1.2.7",
@@ -35,8 +37,8 @@
     "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
-    "start": "set \"NODE_ENV=development\" && webpack-dev-server",
-    "build": "set \"NODE_ENV=development\" && webpack -d --progress --colors",
-    "build-release": "set \"NODE_ENV=production\" && webpack -p --progress --colors"
+    "start": "webpack-dev-server",
+    "build": "webpack -d --progress --colors",
+    "build-release": "NODE_ENV=production webpack -p --progress --colors"
   }
 }
