move to two webpack configs

--- a/replays-web/package.json
+++ b/replays-web/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react": "^2.7.1",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
+    "html-webpack-plugin": "^1.6.0",
     "json-loader": "^0.5.2",
     "react-hot-loader": "^1.2.7",
     "style-loader": "^0.12.3",
@@ -37,8 +38,8 @@
     "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack -d --progress --colors",
-    "build-release": "NODE_ENV=production webpack -p --progress --colors"
+    "start": "webpack-dev-server --config webpack-debug.config.js",
+    "build": "webpack -d --progress --colors --config webpack-debug.config.js",
+    "build-release": "NODE_ENV=production webpack -p --progress --colors --config webpack-release.config.js"
   }
 }
